# volve-db

./: .geminiignore  .gitignore  LICENSE-VOLVE-DATA.md  README.md  main.py  pyproject.toml
.github/workflows/: build-parquet.yml  deploy-pages.yml
database/: volve.db
parquet/: CNAME  README.md  daily_production.parquet  index.html  monthly_production.parquet  schema.json  schema.md  schema.sql  wells.parquet
scripts/: __init__.py
scripts/analysis/: __init__.py  production_analysis.py  production_analysis_local.py  production_analysis_remote.py  utils.py
scripts/explore/: PRODUCTION_DATA_FINDINGS.md  __init__.py  analyze_production_data.py
scripts/export/: __init__.py  export_constants.py  export_schema.py  export_utils.py  parquet_export.py  test_integration.py
scripts/transform/: README.md  SCHEMA_DOCUMENTATION.md  USAGE_EXAMPLES.md  __init__.py  constants.py  create_tables.py  db_utils.py  load_data.py
